--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,10 @@
                 <div class="col-md-6 col-md-offset-3">
                     <div class="row">
                         <div class="page-header">
-                            <h2>Simplex</h2>
+                            <h2>
+                                Simplex
+                                <small><a href="mochila/" class="btn btn-sm btn-default" title="Algoritmo da Mochila">Algoritmo da Mochila</a></small>
+                            </h2>
                         </div>
                     </div>
 
