Ajustes Index (Remocao)

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
                         <div class="page-header">
                             <h2>
                                 Simplex
-                                <small><a href="mochila/" class="btn btn-sm btn-default" title="Algoritmo da Mochila">Algoritmo da Mochila</a></small>
+                                <!-- <small><a href="mochila/" class="btn btn-sm btn-default" title="Algoritmo da Mochila">Algoritmo da Mochila</a></small> -->
                             </h2>
                         </div>
                     </div>
